Fri Jun 11 17:16:00 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:
        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/util/utl_global.cpp:
        
          Implemented a new pragma for AMI4CCM 'ciao ami4ccm idl' that
          enables us to generate an include (in the component stub header
          file) that exposes the AMI4CCM_* version of a uses multiple
          interface type, so it can be referenced in the implied struct
          associated with multiplex receptacles.

Fri Jun 11 12:59:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/typecode.mpb:
          New base project that includes the AnyTypeCode library but just
          enables typecodes for tao_idl

        * tao/LocalObject.cpp:
          Fixed layout of debug statement

Fri Jun 11 09:50:00 UTC 2010  Simon Massey  <simon dot massey at prismtech dot com>

        * TAO_IDL/ast/ast_module.cpp:
        * TAO_IDL/ast/ast_generator.cpp:
        * TAO_IDL/ast/ast_decl.cpp:
        * TAO_IDL/be/be_module.cpp:
        * TAO_IDL/include/utl_scope.h:
        * TAO_IDL/util/utl_scope.cpp:

          Previous commit missed some of the file revertions.

Fri Jun 11 09:37:00 UTC 2010  Simon Massey  <simon dot massey at prismtech dot com>

        * NEWS:
        * TAO_IDL/ast/ast_structure_fwd.cpp:
        * TAO_IDL/ast/ast_interface_fwd.cpp:
        * TAO_IDL/ast/ast_component_fwd.cpp:
        * TAO_IDL/ast/ast_template_module_ref.cpp:
        * TAO_IDL/be/be_generator.cpp:
        * TAO_IDL/be_include/be_module.h:
        * TAO_IDL/include/ast_component_fwd.h
        * TAO_IDL/include/ast_decl.h
        * TAO_IDL/include/ast_interface_fwd.h
        * TAO_IDL/include/ast_module.h
        * TAO_IDL/include/ast_structure_fwd.h
        * TAO_IDL/include/ast_template_module_ref.h
